[package]
name = "ki"
description = "File-Tree Explorer for Ratatui"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/Ikken9/ki"
authors = ["EdJoPaTo <tui-tree-widget-rust-crate@edjopato.de>", "Ikken9"]
edition = "2024"
rust-version = "1.86"
keywords = ["tui", "terminal", "tree", "widget"]
categories = ["command-line-interface"]
include = ["src/**/*", "README.md"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
allow_attributes = "warn"
min_ident_chars = "warn"
std_instead_of_core = "warn"
unused_trait_names = "warn"

[dependencies]
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
unicode-width = "0.2"

[dev-dependencies]
ratatui = "0.29"

[target.'cfg(target_family = "unix")'.dev-dependencies]
pprof = { version = "0.14", features = ["criterion", "flamegraph"] }
